--- a/style.css
+++ b/style.css
@@ -1,7 +1,56 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-    background-color: #111;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+body {
     font-family: 'Roboto', sans-serif;
     color: white;
+    background-color: #111;
 }
 
 main {
@@ -10,10 +59,10 @@ main {
     left: 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
     grid-template-areas:
         'nav nav nav'
-        'video video aside'
-        'comments comments aside';
+        'section section aside';
     grid-auto-rows: auto;
     grid-gap: 30px;
     width: 100%;
@@ -28,36 +77,25 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #232323;
     font-size: 18px;
-}
-nav img {
-    height: 18px;
+    background-color: #232323;
 }
 input {
-    border-radius: 3px;
     padding: 10px 15px;
-}
-input[type=text] {
-    font-size: 18px;
-    border: 1px rgb(240, 240, 240) solid;
-    box-shadow: 1px rgb(250, 250, 250);
-    color: black;
-    background: white;
     margin: 10px;
-}
-input[type=submit] {
-    border: 0;
-    font-size: 13px;
-    font-weight: bold;
-    color: rgb(100, 100, 100);
-    background: rgb(240, 240, 240);
+    font-size: 18px;
+    color: black;
+    background-color: white;
+    border: 1px rgb(240, 240, 240) solid;
+    border-radius: 3px;
+    box-shadow: 1px rgb(250, 250, 250);
 }
 
-.video {
-    grid-area: video;
-    padding-left: 30px;
+section {
+    grid-area: section;
+    margin-left: 30px;
 }
+
 .video-container {
     position: relative;
     height: 0;
@@ -70,29 +108,57 @@ iframe {
     width: 100%;
     height: 100%;
 }
+.video-subheading {
+    display: flex;
+    justify-content: space-between;
+}
 
 aside {
     grid-area: aside;
-    padding-right: 30px;
+    margin-right: 30px;
+}
+aside header {
+    display: flex;
+    justify-content: space-between;
+}
+.related-video {
+    display: flex;
+    margin-bottom: 10px;
 }
 .thumbnail-container {
-    float: left;
     position: relative;
     width: 168px;
+    height: 94px;
 }
 .timestamp {
     position: absolute;
     bottom: 5%;
-    right: 5%;
+    right: 2.5%;
     padding: 2px 4px;
-    border-radius: 2px;
-    background-color: #000;
     font-size: 12px;
     font-weight: bold;
+    background-color: #000;
+    border-radius: 2px;
     opacity: 0.9;
 }
+.mix {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 70px;
+    height: 94px;
+    font-size: 16px;
+    text-align: center;
+    line-height: 1.5;
+    white-space: pre-line;
+    background-color: #000;
+    opacity: 0.7;
+}
+.text-container {
+    margin-left: 10px;
+    white-space: pre-line;
+}
 
-.comments {
-    grid-area: comments;
-    padding-left: 30px;
+.comments header {
+    display: flex;
 }
