--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ nav {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 1;
     grid-area: nav;
     display: flex;
     justify-content: space-between;
