--- a/style.css
+++ b/style.css
@@ -139,10 +139,15 @@ form {
     height: 36px;
     margin: 0 40px;
 }
+input[type=search] {
+    -moz-appearance: none; /* older firefox */
+    -webkit-appearance: none; /* safari, chrome, edge and ie mobile */
+    appearance: none; /* rest */
+ }
 input {
     width: 80%;
     margin: 0;
-    padding: 5px 11px;
+    padding: 5px 0;
     font: 16px/24px 'Roboto', Arial, sans-serif;
     color: rgba(255, 255, 255, 0.882353);
     background-color: #111;
