--- a/style.css
+++ b/style.css
@@ -52,8 +52,6 @@ body {
     font-family: 'Roboto', Arial, sans-serif;
     color: #fff;
     background-color: #111;
-}
-main {
     position: absolute;
     top: 0;
     left: 0;
@@ -62,7 +60,7 @@ main {
     grid-template-rows: auto;
     grid-template-areas:
         'nav nav nav'
-        'section section aside';
+        'main main aside';
     grid-auto-rows: auto;
     grid-gap: 25px;
     width: 100%;
@@ -179,11 +177,13 @@ form button .material-icons {
     text-transform: uppercase;
 }
 
-/* Video */
-section {
-    grid-area: section;
+/* Main */
+main {
+    grid-area: main;
     margin-left: 25px;
 }
+
+/* Video */
 .video-container {
     position: relative;
     height: 0;
